fix: se reemplaza getFirst por get(0) debido al downgrade